# unimore-bda-3-steffo

./: .editorconfig  .gitignore  .gitmodules  DOCUMENT.ipynb  README.ipynb  README.md  pyproject.toml
data/deeprockgalactic/: gtrends-worldwide.csv  itad-price.js  steamdb-players.csv  steamdb-price.csv
data/factorio/: gtrends-worldwide.csv  itad-price.js  steamdb-players.csv  steamdb-price.csv
data/gtrends/: README.md  google-worldwide.csv
data/omori/: gtrends-worldwide.csv  itad-price.js  steam_appid.txt  steamdb-players.csv  steamdb-price.csv
data/potioncraft/: gtrends-worldwide.csv  itad-price.js  steam_appid.txt  steamdb-players.csv  steamdb-price.csv
data/telegram/: .gitignore  README.md  example.json
data/telegramanon/: .gitignore  README.md  example.json  example.pickle  ryg-archive.json  ryg-dnd.json  unimore-extra-gaming.json  unimore-extra-menouno.json  unimore-extra-politics.json  unimore-studenti-archive.json  unimore-studenti-chat.json  unimore-studenti-offtopic.json
data/untitledgoosegame/: gtrends-worldwide.csv  itad-price.js  steamdb-players.csv  steamdb-price.csv
docs/: Makefile
docs/source/: 1_data_collection.rst  4_analysis.rst  conf.py  index.rst
unimore_bda_3/: post.py  prelude.py  processing.py  utils.py
unimore_bda_3/loaders/: __init__.py  covid19.py  gtrends.py  itad.py  steam.py  steamdb.py  telegram.py
unimore_bda_3/plots/: daily_covid_infections_italy.py  hourly_chat_activity.py  monthly_chat_activity.py
