[tool.poetry]
name = "unimore_bda_3"
version = "0.1.0"
description = ""
authors = ["Stefano Pigozzi <me@steffo.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scipy = "^1.9.3"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-autobuild = "^2021.3.14"
rinohtype = "^0.5.4"
pillow = "^9.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
